[project]
name = "retailpolicyassistant"
version = "0.1.0"
description = "Retail Policy Intelligence Decision Support System - AI-powered policy retrieval and analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Web Framework
    "fastapi==0.139.0",
    "uvicorn[standard]==0.51.0",
    "python-multipart==0.0.32",

    # Database
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "psycopg[binary]==3.3.4",
    "pgvector==0.4.2",

    # Data Validation
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",

    # Configuration & Environment
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",

    # Authentication & Security
    "python-jose[cryptography]==3.5.0",
    "cryptography==49.0.0",

    # LangChain Ecosystem
    "langchain==1.3.11",
    "langchain-community==0.4.2",
    "langgraph==1.2.7",
    "pypdf==6.14.2",

    # Observability & Tracing
    "langfuse==4.13.0",
    "langsmith==0.9.6",

    # HTTP & Async
    "httpx==0.28.1",
    "aiohttp==3.14.1",
    "requests==2.34.2",

    # LLM Integration
    "openai==2.44.0",

    # Utilities
    "tenacity==9.1.4",
    "backoff==2.2.1",
    "numpy==2.5.1",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "xxhash==3.8.0",

    # Testing
    "pytest==9.1.1",
]
